# bootcamp

./: README.md  daily_log.md
basics/ex-basics-1/: README.md  pyproject.toml
basics/ex-basics-1/NikitaIsrani_hello/: __init__.py  __main__.py
basics/ex-basics-1/NikitaIsrani_hello.egg-info/: SOURCES.txt  top_level.txt
basics/ex-basics-2/: pyproject.toml
basics/ex-basics-2/src/: nikitaisrani_hello.py
basics/ex-basics-3/: pyproject.toml
basics/ex-basics-3/src/nikitaisrani_hello.egg-info/: PKG-INFO  entry_points.txt  top_level.txt
day-0/basics/: README.md
day-1/documentaion-training/: README.md
day-1/documentaion-training/docs/: daily_log.md  design_doc.md  index.md  login_flow.md
day-2/python-drills/: README.md
day-2/python-drills/helloworld_nikita/: main.py  pyproject.toml
day-2/python-drills/many_hellos/: pyproject.toml
documentation-traning/: mkdocs.yml
documentation-traning/docs/: 3-tier-architecture.md  README.md  architecture.md  daily_log.md  design_document_mindmap.md  feature_proposal.md  markdown-cheatsheet.md  signup_flow.md  system_map.md
python_drills/: README.md
python_drills/ex-1/sub-ex-1/: dict_access.py  immutable_tuples.py  list_copying_pitfall.py  list_operations.py  list_slicing.py  set_operations.py  tuple_unpacking.py
python_drills/ex-1/sub-ex-2/: dict_comprehension.py  filter_even_length_strings.py  list_comprehension_condition.py  list_vs_generator_memory.py  nested_list_comprehension.py  replace_negative_with_zero.py  set_comprehension.py
python_drills/ex-7/sub-ex-5/: pyproject.toml
python_drills/ex-7/sub-ex-5/mypkg/: cli.py
python_drills/ex-7/sub-ex-5/mypkg.egg-info/: PKG-INFO
python_drills/helloworld_nikita/: main.py  pyproject.toml
python_drills/helloworld_nikita/helloworld_nikita/: config.py  hello.py
python_drills/helloworld_nikita/helloworld_nikita.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
python_drills/many_hellos/: pyproject.toml
(+448 files in other folders)
