[project]
name = "nikitaisrani-hello"
version = "0.1.14"
description = "CLI hello app using Typer"
authors = [{ name = "Nikita Israni" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["typer"]

[project.scripts]
nikitaisrani-hello = "nikitaisrani_hello.main:app"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["nikitaisrani_hello"]
