[project]
name = "mypkg"
version = "0.1.0"
description = "A sample CLI tool"
authors = [{ name = "Nikita Israni", email = "nikitaisrai08@gmail.com" }]
requires-python = ">=3.8"
dependencies = []

[project.scripts]
mytool = "mypkg.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
